samples/_failures_safe/1761454016_2a62db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d0f7b22.c: In function ‘main’:
./samples/SAFE/__tmp_4d0f7b22.c:152:5: error: expected expression at end of input
  152 |     } else
      |     ^
./samples/SAFE/__tmp_4d0f7b22.c:152:5: error: expected declaration or statement at end of input
